VCSample/include/PortSIPLib/PortSIPLib.hxx



	int PortSIP_getAudioStatistics(void * libSDK, long sessionId,
		int * sendBytes, int * sendPackets,
		int * sendPacketsLost, int * sendFractionLost,
		int * sendRttMS, int * sendCodecType,
		int * sendJitterMS, int * sendAudioLevel,
		int * recvBytes, int * recvPackets,
		int * recvPacketsLost, int * recvFractionLost,
		int * recvCodecType, int * recvJitterMS,
		int * recvAudioLevel);


	int PortSIP_getVideoStatistics(void * libSDK, long sessionId,
		int * sendBytes,
		int * sendPackets,
		int * sendPacketsLost,
		int * sendFractionLost,
		int * sendRttMS,
		int * sendCodecType,
		int * sendFrameWidth,
		int * sendFrameHeight,
		int * sendBitrateBPS,
		int * sendFramerate,
		//Receiver
		int * recvBytes,
		int * recvPackets,
		int * recvPacketsLost,
		int * recvFractionLost,
		int * recvCodecType,
		int * recvFrameWidth,
		int * recvFrameHeight,
		int * recvBitrateBPS,
		int * recvFramerate);


	void PortSIP_enableVAD(void * libSDK, bool state);

	void PortSIP_enableAEC(void * libSDK, bool state);

	void PortSIP_enableCNG(void * libSDK, bool state);

	void PortSIP_enableAGC(void * libSDK, bool state);

	void PortSIP_enableANS(void * libSDK, bool state);

	int PortSIP_enableAudioQos(void * libSDK, bool state);

	int PortSIP_enableVideoQos(void * libSDK, bool state);

	int PortSIP_setVideoMTU(void * libSDK, int mtu);



	int PortSIP_sendOptions(void * libSDK, const char * to, const char * sdp);

	int PortSIP_sendInfo(void * libSDK, long sessionId, const char * mimeType, const char * subMimeType, const char * infoContents);


	long PortSIP_sendSubscription(void * libSDK, const char * to, const char * eventName);

	void PortSIP_terminateSubscription(void * libSDK, long subscribeId);


	long PortSIP_sendMessage(void * libSDK,
		long sessionId,
		const char * mimeType,
		const char * subMimeType,
		const unsigned char * message,
		int messageLength);


	long PortSIP_sendOutOfDialogMessage(void * libSDK,
		const char * to,
		const char * mimeType,
		const char * subMimeType,
		bool isSMS,
		const unsigned char * message,
		int messageLength);


	int PortSIP_setDefaultSubscriptionTime(void * libSDK, unsigned int secs);

	int PortSIP_setDefaultPublicationTime(void * libSDK, unsigned int secs);


	int PortSIP_setPresenceMode(void * libSDK, int mode);

	long PortSIP_presenceSubscribe(void * libSDK, const char * subscribeTo, const char * subject);

	int PortSIP_presenceTerminateSubscribe(void * libSDK, long subscribeId);


	int PortSIP_presenceAcceptSubscribe(void * libSDK, long subscribeId);



	int PortSIP_presenceRejectSubscribe(void * libSDK, long subscribeId);

	int PortSIP_setPresenceStatus(void * libSDK, long subscribeId, const char * statusText);




	//////////////////////////////////////////////////////////////////////////
	//
	// Device Manage functions.
	//
	//////////////////////////////////////////////////////////////////////////

	int PortSIP_getNumOfRecordingDevices(void * libSDK);


	int PortSIP_getNumOfPlayoutDevices(void * libSDK);


	int PortSIP_getRecordingDeviceName(void * libSDK,
		int index,
		char * nameUTF8,
		int nameUTF8Length);


	int PortSIP_getPlayoutDeviceName(void * libSDK,
		int index,
		char * nameUTF8,
		int nameUTF8Length);


	int PortSIP_setSpeakerVolume(void * libSDK, unsigned int volume);

	int PortSIP_getSpeakerVolume(void * libSDK);


	int PortSIP_setMicVolume(void * libSDK, unsigned int volume);

	int PortSIP_getMicVolume(void * libSDK);

	void PortSIP_audioPlayLoopbackTest(void * libSDK, bool enable);


	// Video device
	int PortSIP_getNumOfVideoCaptureDevices(void * libSDK);