CSharpSample_DLL/PortSIP/PortSIPNativeMethods.cs


       [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
       public static unsafe extern Int32 PortSIP_getAudioStatistics(IntPtr libSDK,
                                                                        Int32 sessionId,
                                                                        out Int32 sendBytes,
                                                                        out Int32 sendPackets,
                                                                        out Int32 sendPacketsLost,
                                                                        out Int32 sendFractionLost,
                                                                        out Int32 sendRttMS,
                                                                        out Int32 sendCodecType,
                                                                        out Int32 sendJitterMS,
                                                                        out Int32 sendAudioLevel,
                                                                        out Int32 recvBytes,
                                                                        out Int32 recvPackets,
                                                                        out Int32 recvPacketsLost,
                                                                        out Int32 recvFractionLost,
                                                                        out Int32 recvCodecType,
                                                                        out Int32 recvJitterMS,
                                                                        out Int32 recvAudioLevel);

       [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
       public static unsafe extern Int32 PortSIP_getVideoStatistics(IntPtr libSDK,
                                                                        Int32 sessionId,
                                                                        out Int32 sendBytes,
                                                                        out Int32 sendPackets,
                                                                        out Int32 sendPacketsLost,
                                                                        out Int32 sendFractionLost,
                                                                        out Int32 sendRttMS,
                                                                        out Int32 sendCodecType,
                                                                        out Int32 sendFrameWidth,
                                                                        out Int32 sendFrameHeight,
                                                                        out Int32 sendBitrateBPS,
                                                                        out Int32 sendFramerate,
                                                                        out Int32 recvBytes,
                                                                        out Int32 recvPackets,
                                                                        out Int32 recvPacketsLost,
                                                                        out Int32 recvFractionLost,
                                                                        out Int32 recvCodecType,
                                                                        out Int32 recvFrameWidth,
                                                                        out Int32 recvFrameHeight,
                                                                        out Int32 recvBitrateBPS,
                                                                        out Int32 recvFramerate);


       [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
       public static unsafe extern void PortSIP_enableAEC(IntPtr libSDK, Int32 ecMode);

       [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
       public static unsafe extern void PortSIP_enableVAD(IntPtr libSDK, [MarshalAs(UnmanagedType.I1)] Boolean state);

       [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
       public static unsafe extern void PortSIP_enableCNG(IntPtr libSDK, [MarshalAs(UnmanagedType.I1)] Boolean state);

       [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
       public static unsafe extern void PortSIP_enableAGC(IntPtr libSDK, Int32 agcMode);


       [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
       public static unsafe extern void PortSIP_enableANS(IntPtr libSDK, Int32 nsMode);

       [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
       public static unsafe extern Int32 PortSIP_enableAudioQos(IntPtr libSDK,
                                                              [MarshalAs(UnmanagedType.I1)] Boolean state);

       [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
       public static unsafe extern Int32 PortSIP_enableVideoQos(IntPtr libSDK, [MarshalAs(UnmanagedType.I1)] Boolean state);


       [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
       public static unsafe extern Int32 PortSIP_setVideoMTU(IntPtr libSDK, Int32 mtu);

       [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
       public static unsafe extern Int32 PortSIP_sendOptions(IntPtr libSDK, String to, String sdp);

        [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static unsafe extern Int32 PortSIP_sendInfo(IntPtr libSDK,
                                                      Int32 sessionId,
                                                      String mimeType,
                                                      String subMimeType,
                                                      String infoContents);

        [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static unsafe extern Int32 PortSIP_sendSubscription(IntPtr libSDK,
                                                      String to,
                                                      String eventName);

        [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static unsafe extern Int32 PortSIP_terminateSubscription(IntPtr libSDK, Int32 subscritionId);


        [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static unsafe extern Int32 PortSIP_sendMessage(IntPtr libSDK, Int32 sessionId, String mimeType, String subMimeType, [MarshalAs(UnmanagedType.LPArray)] byte[] message, Int32 messageLength);


        [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static unsafe extern Int32 PortSIP_sendOutOfDialogMessage(IntPtr libSDK, String to, String mimeType, String subMimeType, [MarshalAs(UnmanagedType.I1)] Boolean isSMS, [MarshalAs(UnmanagedType.LPArray)] byte[] message, Int32 messageLength);

        [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static unsafe extern Int32 PortSIP_setDefaultSubscriptionTime(IntPtr libSDK, Int32 secs);

        [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static unsafe extern Int32 PortSIP_setDefaultPublicationTime(IntPtr libSDK, Int32 secs);



        [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static unsafe extern Int32 PortSIP_setPresenceMode(IntPtr libSDK, Int32 mode);

        [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static unsafe extern Int32 PortSIP_presenceSubscribe(IntPtr libSDK, String to, String subject);


        [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static unsafe extern Int32 PortSIP_presenceTerminateSubscribe(IntPtr libSDK, Int32 subscribeId);


        [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static unsafe extern Int32 PortSIP_presenceRejectSubscribe(IntPtr libSDK, Int32 subscribeId);

        [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static unsafe extern Int32 PortSIP_presenceAcceptSubscribe(IntPtr libSDK, Int32 subscribeId);

        [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static unsafe extern Int32 PortSIP_setPresenceStatus(IntPtr libSDK, Int32 subscribeId, String stateText);


        [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static unsafe extern Int32 PortSIP_getNumOfRecordingDevices(IntPtr libSDK);

        
        [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static unsafe extern Int32 PortSIP_getNumOfPlayoutDevices(IntPtr libSDK);


        [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static unsafe extern Int32 PortSIP_getRecordingDeviceName(IntPtr libSDK, 
                                                             Int32 deviceIndex,
                                                             StringBuilder nameUTF8,
                                                             Int32 nameUTF8Length);

        [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static unsafe extern Int32 PortSIP_getPlayoutDeviceName(IntPtr libSDK,
                                                            Int32 deviceIndex,
                                                            StringBuilder nameUTF8,
                                                            Int32 nameUTF8Length);


        [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static unsafe extern Int32 PortSIP_setSpeakerVolume(IntPtr libSDK, Int32 volume);

        [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static unsafe extern Int32 PortSIP_getSpeakerVolume(IntPtr libSDK);

        [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static unsafe extern Int32 PortSIP_setMicVolume(IntPtr libSDK, Int32 volume);

        [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static unsafe extern Int32 PortSIP_getMicVolume(IntPtr libSDK);


        [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static unsafe extern void PortSIP_audioPlayLoopbackTest(IntPtr libSDK, [MarshalAs(UnmanagedType.I1)] Boolean enable);


        [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static unsafe extern Int32 PortSIP_getNumOfVideoCaptureDevices(IntPtr libSDK);


